--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						<div class="header-text">
 							<h2>hi <span>,</span> i am <br> Roshelle <br> Muhajil <span>.</span>   </h2>
 							<p>ui/ux designer and software developer</p>
-							<a href="assets/download/muhajil.txt" download>download resume</a>
+							<a href="assets/download/CV.pdf" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
